src/objects/System_Design__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_Arrays__c</fullName>
        <description>Number of Arrays in Design</description>
        <inlineHelpText>Number of Arrays in Design</inlineHelpText>
        <label>Number of Arrays</label>
        <summaryFilterItems>
            <field>System_Design_Array__c.Array_Size_kW__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Arrays_on_Flat_Roofs__c</fullName>
        <description>Number of Arrays That Have Items on a Flat Roof</description>
        <inlineHelpText>Number of Arrays That Have Items on a Flat Roof</inlineHelpText>
        <label>Number of Arrays on Flat Roofs</label>
        <summaryFilterItems>
            <field>System_Design_Array__c.Items_On_Flat_Roof__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations_with_Tree_Removal__c</fullName>
        <label>Number of Locations with Tree Removal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Physical_Surfaces__c</fullName>
        <description>Count of Physical Surfaces (typically roof surfaces) included in System Design</description>
        <inlineHelpText>Count of Physical Surfaces (typically roof surfaces) included in System Design</inlineHelpText>
        <label>Number of Physical Surfaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Official_Overall_Site_Quality__c</fullName>
        <description>OFFICIAL Overall Site Quality</description>
        <formula>Sunnova_Overall_Site_Quality__c</formula>
        <inlineHelpText>OFFICIAL Overall Site Quality</inlineHelpText>
        <label>Official Overall Site Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Official_Projected_Annual_Output_kWh_y__c</fullName>
        <description>OFFICIAL Total Projected Annual Output (kWh/yr)</description>
        <formula>Sunnova_Projected_Annual_Output_kWh_y__c</formula>
        <inlineHelpText>OFFICIAL Total Projected Annual Output (kWh/yr)</inlineHelpText>
        <label>Official Projected Annual Output (kWh/y)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If SD is Not Closed and having at least one Open Quote</inlineHelpText>
        <label>Open Quote ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Site_Quality__c</fullName>
        <description>Total_Projected_Annual_Output_kWh__c / System_Size_kW__c</description>
        <formula>IF(
     OR( Total_Projected_Annual_Output_kWh_y__c  = 0 ,Total_System_Size_kW__c = 0) , 
    0, 
    Total_Projected_Annual_Output_kWh_y__c /  Total_System_Size_kW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Site Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_TSRF__c</fullName>
        <formula>IF( Legacy_Astrum_Site_Quality__c , Overall_Site_Quality__c /  Property__r.Optimal_Site_Quality_kWh_y_kW__c,  Total_TSRF__c /  Total_System_Size_kW__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall TSRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Panel_Count__c</fullName>
        <label>Panel Count</label>
        <summarizedField>System_Design_Array__c.Panel_Count__c</summarizedField>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Potential_Lease_Inverters__c</fullName>
        <inlineHelpText>Lease Only -- In the event of a lease, this is how many lease inverters are required</inlineHelpText>
        <label>Potential Lease Inverters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_SRECs_Generated__c</fullName>
        <description>Estimated SRECs Generated Each Year Based On Total Projected Annual Output</description>
        <formula>FLOOR(Total_Projected_Annual_Output_kWh_y__c /1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated SRECs Generated Each Year Based On Total Projected Annual Output</inlineHelpText>
        <label>Projected Annual SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>System Designs</relationshipLabel>
        <relationshipName>System_Designs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Roof_Rating__c</fullName>
        <description>The viability rating for solar installation related to the structure roof.</description>
        <inlineHelpText>Select the viability rating for solar installation related to the structure roof.</inlineHelpText>
        <label>Roof Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Can Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can Not Install</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SQ_Calculation_Status__c</fullName>
        <label>SQ Calculation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suneye_TSRF_Multiplier__c</fullName>
        <label>Suneye TSRF Multiplier</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suneye_TSRF__c</fullName>
        <formula>Suneye_TSRF_Multiplier__c / Total_System_Size_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suneye TSRF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunnova_Avoided_Utility_Rate__c</fullName>
        <label>Sunnova Avoided Utility Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sunnova_Overall_Site_Quality__c</fullName>
        <description>Sunnova Overall Site Quality</description>
        <formula>IF(
OR(  Sunnova_Projected_Annual_Output_kWh_y__c = 0 ,Total_System_Size_kW__c = 0) , 
0, 
Sunnova_Projected_Annual_Output_kWh_y__c / Total_System_Size_kW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sunnova Overall Site Quality</inlineHelpText>
        <label>Sunnova Overall Site Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunnova_Projected_Annual_Output_kWh_y__c</fullName>
        <description>Total Projected Annual Production for Sunnova Lease Funds</description>
        <inlineHelpText>Total Projected Annual Production for Sunnova Lease Funds</inlineHelpText>
        <label>Sunnova Projected Annual Output (kWh/y)</label>
        <summarizedField>System_Design_Array__c.Sunnova_Projected_Annual_Output_kWh_y__c</summarizedField>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>System Designs</relationshipLabel>
        <relationshipName>System_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Inverter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Inverter</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>System Inverter must be a System Design Product with record type of Inverter.</errorMessage>
            <filterItems>
                <field>System_Design_Product__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Inverter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>System Designs (System Inverter)</relationshipLabel>
        <relationshipName>System_Designs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Makeup__c</fullName>
        <label>System Makeup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Panel</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>System Panel must be a System Design Product with record type of Panel.</errorMessage>
            <filterItems>
                <field>System_Design_Product__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Panel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>System Designs</relationshipLabel>
        <relationshipName>System_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Annual_Output_kWh_y__c</fullName>
        <label>Total Projected Annual Output (kWh/y)</label>
        <summarizedField>System_Design_Array__c.Projected_Annual_Output_kWh_y__c</summarizedField>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_System_Size_AC_Rating_kW__c</fullName>
        <formula>MIN( Inverter_Efficiency_AC_System_Size_kW__c,  Max_Inverter_Output_AC_System_Size_kW__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total System Size AC Rating (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_System_Size_PTC_rating_kW__c</fullName>
        <label>Total System Size PTC rating (kW)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_System_Size_kW__c</fullName>
        <label>Total System Size (kW)</label>
        <summarizedField>System_Design_Array__c.Array_Size_kW__c</summarizedField>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_TSRF__c</fullName>
        <inlineHelpText>Used for Calculating Overall TSRF</inlineHelpText>
        <label>Total TSRF</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tree_Removal__c</fullName>
        <formula>Number_of_Locations_with_Tree_Removal__c &gt; 0</formula>
        <inlineHelpText>If checked, this system design has panels associated to Install Locations from a Survey which was checked for Tree Removal.</inlineHelpText>
        <label>Tree Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trench_Length__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Estimated length of trench required</description>
        <inlineHelpText>Estimated length of trench ( in feet) required</inlineHelpText>
        <label>Trench Length (feet)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trenching_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This System Design Requires Trenching</description>
        <inlineHelpText>This System Design Requires Trenching</inlineHelpText>
        <label>Trenching Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is System Design is Valid ?</description>
        <inlineHelpText>Is System Design is Valid ?</inlineHelpText>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Errors__c</fullName>
        <label>Validation Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vent_Stack_Movement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This System Design Requires Vent Stack Movement</description>
        <inlineHelpText>This System Design Requires Vent Stack Movement</inlineHelpText>
        <label>Vent Stack Movement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighted_Panel_Azimuth_Sum__c</fullName>
        <label>Weighted Panel Azimuth Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Panel_Tilt_Sum__c</fullName>
        <label>Weighted Panel Tilt Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>System Design</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Property__c</columns>
        <columns>Survey__c</columns>
        <columns>Overall_TSRF__c</columns>
        <columns>Panel_Count__c</columns>
        <columns>Total_Projected_Annual_Output_kWh_y__c</columns>
        <columns>Total_System_Size_kW__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Aurora_Production_Study_Design__c</columns>
        <columns>Locked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Compare_SQ</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Overall_Site_Quality__c</columns>
        <columns>NRG_Overall_Site_Quality__c</columns>
        <columns>Total_Projected_Annual_Output_kWh_y__c</columns>
        <columns>NRG_Projected_Annual_Output_kWh_y__c</columns>
        <columns>Astrum_SQ_Calculation_Status__c</columns>
        <columns>NRG_SQ_Calculation_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Legacy_Astrum_Site_Quality__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/1/2014 12:00 AM</value>
        </filters>
        <label>Compare SQ</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SD-{0}</displayFormat>
        <label>System Design Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Designs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Property_Must_Have_Optimal_Site_Qual</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL( Property__r.Optimal_Site_Quality_kWh_y_kW__c )</errorConditionFormula>
        <errorDisplayField>Property__c</errorDisplayField>
        <errorMessage>Property must have an Optimal Site Quality to create a System Design.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_is_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;, false, PRIORVALUE(Locked__c) = true)</errorConditionFormula>
        <errorMessage>Record is part of a closed Contract, and is locked from further editing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Trench_Length</fullName>
        <active>true</active>
        <description>if &quot;Trenching?&quot; is &apos;TRUE&apos; requires Length of Trench</description>
        <errorConditionFormula>AND( Trenching_Required__c , OR( ISNULL(Trench_Length__c), Trench_Length__c &lt;= 0 ))</errorConditionFormula>
        <errorDisplayField>Trench_Length__c</errorDisplayField>
        <errorMessage>Trenching Length is required if Trenching Required is True.</errorMessage>
    </validationRules>
</CustomObject>